Adding stomp support for backend/frontend, Adding spring email, switching to mariadb, refactored controller paths

--- a/AutomationController/src/main/resources/static/roomcontrol.html
+++ b/AutomationController/src/main/resources/static/roomcontrol.html
@@ -716,7 +716,11 @@
     </div>
 </div>
 
+<script src="js/sockjs.min.js"></script>
+<script src="js/stomp.min.js"></script>
+<script src="js/stomphandler.js"></script>
 <script src="js/restinterface.min.js"></script>
+<script src="js/onDeviceChange.min.js"></script>
 <script src="js/roomcontrol.min.js"></script>
 
 </body>
