Led driver now uses wiringPi for pwm, Fixed caching in primary node

--- a/AutomationController/src/main/resources/static/thermostat.html
+++ b/AutomationController/src/main/resources/static/thermostat.html
@@ -2605,6 +2605,6 @@
 <script src="js/stomphandler.js"></script>
 <script src="js/restinterface.min.js"></script>
 <script src="js/onDeviceChange.min.js"></script>
-<script src="js/thermostat.js"></script>
+<script src="js/thermostat.min.js"></script>
 </body>
 </html>
